# playerdo

./: .hgignore  .pre-commit-config.yaml  CHANGES.rst  CHANGES.txt  README.rst  README.txt  RELEASE.rst  player_do  pyproject.toml  release.sh  setup.cfg  setup.py
playerdo/: install.py  main.py  utils.py
playerdo/backends/: __init__.py  amarok.py  banshee.py  base.py  clementine.py  cmus.py  exaile.py  moc.py  mpd.py  mpris.py  mpris2.py  pianobar.py  quodlibet.py  rhythmbox.py  shellfm.py  socket.py
src/playerdo/: cli.py  install.py  main.py  utils.py
src/playerdo/backends/: __init__.py  base.py  cmus.py  mpd.py  mpris2.py  pianobar.py  rhythmbox.py  shellfm.py  socket.py
