[metadata]
name = playerdo
version = attr: playerdo.__version__
author = Luke Plant
author_email = luke@lukeplant.me.uk
description = Control various media players from a single command line interface.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
keywords = music media MPRIS player command interface wrapper
url = http://bitbucket.org/spookylukey/playerdo
classifiers =
    Topic :: Multimedia :: Sound/Audio :: Players
    License :: OSI Approved :: BSD License
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir = =src
include_package_data = True
python_requires = >=3.8

[options.entry_points]
console_scripts =
    player_do = playerdo.cli:main


[bdist_wheel]
universal = 0

[flake8]
max_line_length = 120
